gcc/testsuite/g++.dg/template/typedef2.C
// PR c++/18155

template<int> typedef struct A; // { dg-error "" }
